# Lab_Ducktyping

./: README.md  logger.py  pyproject.toml
src/: exceptions.py  main.py  models.py  protocols.py  receiver.py
src/sources/: api_source.py  file_source.py  generator_source.py
tests/: test_api_source.py  test_file_source.py  test_generator_source.py  test_main.py  test_model.py  test_protocols.py  test_receiver.py
