[project]
name = "console-app-with-logging"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.3.0",
    "pyproject-toml>=0.1.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
    "typer>=0.20.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src.data"]
omit = ["src/main.py", "tests/*"]